fixed text alignment in sections on some breakpoints

--- a/css/style.scss
+++ b/css/style.scss
@@ -82,6 +82,10 @@ header .left {
     justify-content: space-between;
 }
 
+.flex-start {
+    align-items: flex-start;
+}
+
 #modal-container {
     margin: auto auto;
     width:100%;
@@ -121,8 +125,8 @@ header .left {
         place-content: center;
         box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1),
                     -3px -3px 10px rgba(255, 255, 255, 0.6);
-
-        width:70px;
+        padding:0.3em;
+        
         border-radius: 15px;
 
                    
@@ -162,28 +166,44 @@ header .left {
         margin-bottom:2em;
     }
 
-    .buttons {
+    .options {
         flex-direction: row;
         color:#3F8168;
         justify-content: flex-start;
         margin: 4em 0 0 0;
+        display: flex;
+        flex-wrap: wrap;
+        margin: 2em auto;
+        text-align: center;
 
-        button {
+        .button {
             color:#3F8168;
-            margin:0 1em 0 0;
             border-radius: 5px;
             transition: box-shadow 0.2s ease-in-out;
             padding:1.2em;
             font-size: 0.9em;
             display:flex;
+            margin: 0 1em 1em 0;
+            box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1),
+            -3px -3px 10px rgba(255, 255, 255, 0.6);
 
-        box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1),
-        -3px -3px 10px rgba(255, 255, 255, 0.6);
-            
+    
 
             img {
-                fill:#3F8168;
-            }
+                margin-right: 0.7em;
+                height: calc(1.5em - 2px);
+                width: auto;
+              }
+        }
+
+        .button:hover {
+            box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.1),
+            -7px -7px 15px rgba(255, 255, 255, 0.6);
+        }
+    
+        .button:active {
+            box-shadow: inset 3px 3px 10px rgba(0, 0, 0, 0.1),
+            inset -3px -3px 10px rgba(255, 255, 255, 1);
         }
 
         .cta {
@@ -347,6 +367,11 @@ section {
         padding:0.5em 0;
         max-width: 600px;
     }
+    .inner {
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+    }
 
 }
 
@@ -469,7 +494,14 @@ section {
     }
 
     
-
+    
+    section {
+        .inner {
+            display:flex;
+            flex-direction: column;
+            align-items: flex-start;
+        }
+    }
 
 
     .featured img {
@@ -649,14 +681,24 @@ section {
 
         .content {
             margin-top:5em;
-            display:grid;
+            display:flex;
+            align-items: flex-start;
             gap:4em;
-            grid-template-columns: 2fr 3fr;
+
+            .left {
+                flex-grow: 1;
+                max-width: 400px;
+                
+            }
+
+            .img-wrapper {
+                position: relative;
+                flex-grow: 3;
+            }
+
         }
 
-        .img-wrapper {
-            position: relative;
-        }
+        
 
 
 
@@ -692,10 +734,15 @@ section {
 
     }
 
+
+    .hero .hero-right {
+        max-width: 33%;
+    }
     .hero-graphic {
         display: block;
         margin-left:-2px;
         width:auto;
+        max-width: 100%;
         height:65vh;
         position:relative;
         z-index: -1000;
@@ -802,6 +849,9 @@ section {
 
 @media only screen and (min-width: 1400px) {
 
+    #modal-container .content .left {
+        max-width: 500px;
+    }
 
 
     .about {
